test/warnings/no_modifies_while_returning_unit.mli
val no_modifies_while_returning_unit : int -> unit
(*@ no_modifies_while_returning_unit i
    requires true *)
